<resources>
    <string name="app_name">mSIHAT</string>
    <string name="google_api_key2">AIzaSyBiRRHRVJFfhT1LsU5M0B-_FlS7Eyr7Sc8</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="title_activity_patient_registration">Register a Patient</string>
    <string name="nric">NRIC</string>
    <string name="relationship">Relationship</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>

    <string name="title_activity_main">Appointments</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="appointments">Appointments</string>
    <string name="pending_appointments">Pending Appointments</string>
    <string name="completed_appointments">Completed Appointments</string>
    <string name="my_account">My Account</string>
    <string name="my_patients">My Patients</string>
    <string name="title_activity_new_appointment">New Appointment</string>
    <string name="multiple_appointments">Multiple&#10;Appointments</string>
    <string name="single_appointment">Single&#10;Appointment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_appointment_details">Appointment Details</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string-array name="appointment_details_pager">
        <item>Appointment</item>
        <item>Patient</item>
        <item>Practitioner</item>
    </string-array>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="title_activity_register_patient">RegisterPatient</string>
    <string name="register_new_patient">Register New Patient</string>
    <string name="not_having_registered_patients">You have not registered any patient(s) yet.</string>
    <string name="tap_on">Tap on</string>
    <string name="to_register_new_patient">to register a new patient</string>
    <string name="no_patient_found">No patient found</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="change_password">Change Password</string>
    <string name="change_card">Change Card</string>
    <string name="title_update_account">Update Account</string>
    <string name="title_register_new_patient">Register New Patient</string>
    <string name="done">Done</string>
    <string name="country_of_residence">Country of Residence</string>
    <string name="state_of_residence">State of Residence</string>
    <string name="city_of_residence">City of Residence</string>
    <string name="postcode_of_residence">Postcode of Residence</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="updating_account">Updating account...</string>
    <string name="updating_password">Updating password...</string>
    <string name="updating_creditcard">Updating creditcard...</string>
    <string name="subservice">Subservice</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="practitioner_name">Practitioner Name</string>
    <string name="patient_name">Patient Name</string>
    <string name="new_appointment">New Appointment</string>
    <string name="select_a_service">Select a Service</string>
    <string name="choose_your_patient">Choose Your Patient</string>
    <string name="select_a_subservice">Select a Subservice</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_available_practitioners">Available Practitioners</string>
    <string name="mobility">Mobility</string>
    <string name="feeding">Feeding</string>
    <string name="toileting">Toileting</string>
    <string name="incontinent">Incontinent</string>
    <string name="urinary_catheter">Urinary Catheter</string>
    <string name="wound_dressing">Wound Dressing</string>
    <string name="mental_status">Mental Status</string>
    <string name="mobility_condition">Mobility Condition</string>
    <string name="feeding_condition">Feeding Condition</string>
    <string name="incontinent_condition">Incontinent Condition</string>
    <string name="urinary_catheter_condition">Urinary Catheter Usage</string>
    <string name="wound_dressing_condition">Requires Wound Dressing?</string>
    <string name="mental_condition">Mental Condition</string>
    <string name="preparing">Preparing...</string>
    <string name="starting_date">Starting Date</string>
    <string name="amount">Amount</string>
    <string name="frequency">Frequency</string>
    <string name="to_book_for_appointments">to book for appointment(s)</string>
    <string name="you_have_no_appointments_booked_yet">You have no appointment(s) booked yet</string>
    <string name="service_rates">Service Rates</string>
    <string name="for_space">"for "</string>
    <string name="space_practitioners">" practitioners"</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>
    <string name="call">Call</string>
    <string name="searching_for_practitioners">Searching for practitioners...</string>
    <string name="error">Error</string>
    <string name="no_available_practitioners">No available practitioners</string>
    <string name="submitting_your_booking">Submitting your booking...</string>
    <string name="check_network_connection">Check network connection</string>
    <string name="please_try_again">Please try again.</string>
    <string name="retrieving_appointments">Retrieving appointments...</string>
    <string name="retrieving_your_details">Retrieving your details...</string>
    <string name="your_account_is_successfully_updated">Your account is successfully updated!</string>
    <string name="successfully_updated_creditcard">Successfully updated creditcard!</string>
    <string name="successfully_updated_password">Successfully updated password!</string>
    <string name="retrieving_your_patients">Retrieving your patients...</string>
    <string name="is_deleted">" is deleted"</string>
    <string name="retrieving_patients_details">Retrieving patient\'s details...</string>
    <string name="please_check_your_inputs">Please check your inputs</string>
    <string name="registering_patient">Registering patient...</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="successfully_registered_a_new_patient">Successfully registered a new patient!</string>
    <string name="loading">Loading...</string>
    <string name="logging_in">Logging in...</string>
    <string name="welcome">"Welcome "</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="failed">Failed</string>
    <string name="signing_you_up">Signing you up...</string>
    <string name="are_you_sure_you_want_to_delete_patient">Are you sure you want to delete this patient?</string>
    <string name="briefly_describe_patient_conditions">Briefly Describe Patient\'s Conditions</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="invalid_username_and_or_password">Invalid username and/or password</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="write_your_comments_here">Write your comments here...</string>
    <string name="submit">Submit</string>
    <string name="submit_your_feedback">Submit Your Feedback</string>
    <string name="submitting">Submitting...</string>
    <string name="thank_you_for_your_feedback">Thank you for your feedback!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="completed">Completed</string>
    <string name="cancelling">Cancelling...</string>
    <string name="youve_cancelled_the_appointment">You\'ve cancelled the appointment</string>
    <string name="amount_to_pay">"Amount to pay: "</string>
    <string name="deleting_patient">Deleting patient...</string>
    <string name="patient_with_this_nric_is_already_registered">Patient with this NRIC is already registered</string>
    <string name="please_register_at_least_one_patient_under_your_account">Please register at least one patient under your account</string>
    <string name="password_needs_to_be_at_least_8_chars_long">Password needs to be at least 8 characters long</string>
    <string name="current_password_is_invalid">Current password is invalid</string>
    <string name="invalid_card">Invalid card</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_starting">StartingActivity</string>
</resources>
