<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_appointments"
            android:checked="true"
            android:icon="@drawable/ic_assignment_24dp_color_text"
            android:title="Home" />
        <item
            android:id="@+id/nav_pending_appointments"
            android:icon="@drawable/ic_assignment_late_24dp_color_text"
            android:title="Appointment" />
        <item
            android:id="@+id/nav_completed_appointments"
            android:icon="@drawable/ic_assignment_turned_in_24dp_color_text"
            android:title="@string/completed_appointments" />
    </group>

    <group
        android:id="@+id/NAV_GROUP_INFO"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_service_rates"
            android:icon="@drawable/ic_attach_money_24dp_color_text"
            android:title="@string/service_rates" />
    </group>

    <group
        android:id="@+id/NAV_GROUP_ACCOUNT"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_account_circle_24dp_color_primary"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_my_patients"
            android:icon="@drawable/ic_group_24dp_color_primary"
            android:title="@string/my_patients" />
        <item
            android:id="@+id/nav_my_favourite"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="My Favourite" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_24dp_color_text"
            android:title="@string/logout" />

    </group>

</menu>
