<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MyPatientsFragment">

    <ListView
        android:id="@+id/list_mypatients"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

    </ListView>
    <LinearLayout
        android:id="@+id/linear_empty_list_mypatients"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:text="@string/not_having_registered_patients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_text_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tap_on"
                android:layout_marginRight="@dimen/hint_drawable_padding_horizontal"
                android:layout_marginEnd="@dimen/hint_drawable_padding_horizontal"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_user_add_24dp_color_text_secondary"
                android:drawableStart="@drawable/ic_user_add_24dp_color_text_secondary"
                android:drawablePadding="@dimen/hint_drawable_padding_horizontal"
                android:text="@string/to_register_new_patient"
                android:gravity="center"/>
        </LinearLayout>


    </LinearLayout>


</FrameLayout>
