<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <EditText
            android:id="@+id/edit_login_username"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/input_field_vertical_padding"
            android:paddingStart="@dimen/input_field_horizontal_padding"
            android:paddingLeft="@dimen/input_field_horizontal_padding"
            android:drawableStart="@drawable/ic_email_24dp_color_primary"
            android:drawableLeft="@drawable/ic_email_24dp_color_primary"
            android:drawablePadding="@dimen/edit_drawable_horizontal_padding"/>

        <EditText
            android:id="@+id/edit_login_password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_field_vertical_margin"
            android:paddingBottom="@dimen/input_field_vertical_padding"
            android:paddingStart="@dimen/input_field_horizontal_padding"
            android:paddingLeft="@dimen/input_field_horizontal_padding"
            android:drawableStart="@drawable/ic_lock_outline_24dp_color_primary"
            android:drawableLeft="@drawable/ic_lock_outline_24dp_color_primary"
            android:drawablePadding="@dimen/edit_drawable_horizontal_padding"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_signup"
            android:text="@string/signup"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_action_height"
            android:layout_weight="1"
            android:background="@color/colorPrimaryLight"/>

        <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_action_height"
            android:layout_weight="1"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
</RelativeLayout>
