<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RatingBar
        android:id="@+id/rating_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/input_field_vertical_margin"
        android:numStars="5"
        android:progressTint="@color/colorStar"
        android:rating="0"
        android:stepSize="1.0" />

    <EditText
        android:id="@+id/edit_feedback_comment"
        android:hint="@string/write_your_comments_here"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/input_field_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="6"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_feedback_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/cancel"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_feedback_submit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="#ffffff" />

    </LinearLayout>


</LinearLayout>