<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/edit_update_account_password_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_field_vertical_margin"
        android:drawableLeft="@drawable/ic_lock_outline_24dp_color_primary"
        android:drawablePadding="@dimen/edit_drawable_horizontal_padding"
        android:drawableStart="@drawable/ic_lock_outline_24dp_color_primary"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/input_field_vertical_padding"
        android:paddingLeft="@dimen/input_field_horizontal_padding"
        android:paddingStart="@dimen/input_field_horizontal_padding" />
    <EditText
        android:id="@+id/edit_update_account_password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_field_vertical_margin"
        android:drawableLeft="@drawable/ic_lock_outline_24dp_color_primary"
        android:drawablePadding="@dimen/edit_drawable_horizontal_padding"
        android:drawableStart="@drawable/ic_lock_outline_24dp_color_primary"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/input_field_vertical_padding"
        android:paddingLeft="@dimen/input_field_horizontal_padding"
        android:paddingStart="@dimen/input_field_horizontal_padding" />
    <EditText
        android:id="@+id/edit_update_account_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_field_vertical_margin"
        android:drawableLeft="@drawable/ic_lock_24dp_color_primary"
        android:drawablePadding="@dimen/edit_drawable_horizontal_padding"
        android:drawableStart="@drawable/ic_lock_24dp_color_primary"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/input_field_vertical_padding"
        android:paddingLeft="@dimen/input_field_horizontal_padding"
        android:paddingStart="@dimen/input_field_horizontal_padding" />

</LinearLayout>